// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`command list should contain all templates in store 1`] = `
"Note: cached, uncached

Found 2 templates:

neo:
@aiou/ts-lib-template
ts-lib-template"
`;

exports[`command list should show empty template list with wrong preset 1`] = `"No templates..."`;

exports[`command list should show template list filter by preset 1`] = `
"Note: cached, uncached

Found 2 templates:

@aiou/ts-lib-template
ts-lib-template"
`;
